--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Demeter",
-  "short_name": "Demeter",
-  "description": "Demeter is a software application that helps farmers manage and optimize their agricultural operations.",
+  "name": "KHETI",
+  "short_name": "KHETI",
+  "description": "KHETI is a software application that helps farmers manage and optimize their agricultural operations.",
   "icons": [
     {
       "src": "/logo-36x36.png",
