--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@google-cloud/text-to-speech": "^4.2.1",
     "@headlessui/react": "^1.7.3",
     "@kommunicate/kommunicate-chatbot-plugin": "^0.0.5",
     "@next-auth/mongodb-adapter": "^1.1.1",
@@ -17,6 +18,7 @@
     "@tailwindcss/forms": "0.2.1",
     "axios": "^0.27.2",
     "chart.js": "^2.9.4",
+    "fs": "^0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-append-prepend": "1.0.8",
     "next": "12.3.1",
@@ -24,6 +26,7 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-loading": "^2.0.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^2.2.19"
