--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.18.8",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-loading": "^2.0.3",
